bzr-builddeb (0.14) unstable; urgency=low

  * Compatible with bzr 0.14.
  * Drop the silly restriction on only invoking the command from the root
    of a branch.
  * Add support for non-native full source packages. To do this, just
    have orig-dir pointing to the dir containing the upstream tarballs.
    This involves a change in behaviour I am afraid. Native packages are
    now not the default, so if you have one echo 'native = True' to
    global.conf.
  * Add support for creating non-native packages from full source branches
    by creating the tarball from the branch, rather than the user creating it.
    It simply blows away debian/ from the tarball and names it appropriately
    in the build dir to get a non-native package where all of and only
    debian/ are in the .diff.gz.
  * Add support for exporting the upstream code from a bzr branch when in
    merge mode. Just use export-upstream with a URI of a bzr branch and that
    code will be the .orig.tar.gz of the source package. Please make sure
    that you don't grab a different upstream code for the same upstream
    version, that could break things horribly. You can also specify the
    revision to export with export-upstream-revision to combat this.
  * Add support for pulling in the upstream branch when it is local so that
    you can build the lastest version. The 'export-upstream-prepull' option
    is only availble as a config file option.

 -- James Westby <jw+debian@jameswestby.net>  Sun, 14 Jan 2007 02:51:04 +0000

bzr-builddeb (0.13) unstable; urgency=low

  * New release. 
  * Comptible with bzr 0.13.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 20 Dec 2006 00:22:18 +0000

bzr-builddeb (0.11) unstable; urgency=low

  * Initial Release. (Closes: #380198)

 -- James Westby <jw+debian@jameswestby.net>  Thu,  3 Aug 2006 19:16:22 +0100