@@ -32,7 +32,9 @@ from bzrlib.workingtree import WorkingTree
 from changes import DebianChanges
 from errors import (DebianError,
                     NoSourceDirError,
-                    BuildFailedError)
+                    BuildFailedError,
+                    StopBuild,
+                    )
 from bdlogging import info, debug
 from util import recursive_copy
 
@@ -229,11 +231,12 @@ class DebMergeExportUpstreamBuild(DebMergeBuild):
      .orig.tar.gz before building."""
 
   def __init__(self, properties, tree, export_upstream, export_revision,
-               export_prepull):
+               export_prepull, stop_on_no_change):
     DebMergeBuild.__init__(self, properties, tree)
     self._export_upstream = export_upstream
     self._export_revision = export_revision
     self._export_prepull = export_prepull
+    self._stop_on_no_change = stop_on_no_change
 
   def _export_upstream_branch(self):
     build_dir = self._properties.build_dir()
@@ -264,6 +267,8 @@ class DebMergeExportUpstreamBuild(DebMergeBuild):
       else:
         count = branch_to.pull(branch_from)
       info('Pulled %d revision(s).', count)
+      if self._stop_on_no_change:
+        raise StopBuild('No changes to upstream branch')
       b = branch_to
     else:
       b = Branch.open(export_upstream)
