@@ -22,6 +22,7 @@ bzr-builddeb (0.14) unstable; urgency=low
   * Add support for pulling in the upstream branch when it is local so that
     you can build the lastest version. The 'export-upstream-prepull' option
     is only availble as a config file option.
+  * Add an option to stop the build if the above mentioned pull did nothing.
 
  -- James Westby <jw+debian@jameswestby.net>  Sun, 14 Jan 2007 02:51:04 +0000
 
